Reorganized Projects and added Command Line Tool