@@ -1,14 +1,12 @@
 group 'procul.studios'
 version 'master'
 
-
 apply plugin: 'java'
-
-apply plugin: 'com.github.johnrengelman.shadow'
 
 ext {
     moduleName = 'ps.ProcelioServer'
     mainClassName = 'procul.studios.ProcelioServer'
+    moduleCompile = false
 }
 
 compileJava {
@@ -21,6 +19,12 @@ repositories {
 }
 
 dependencies {
+    // java.xml.bind
+    compile "javax.xml.bind:jaxb-api:2.3.0"
+    compile "com.sun.xml.bind:jaxb-core:2.3.0"
+    compile "com.sun.xml.bind:jaxb-impl:2.3.0"
+    compile 'javax.annotation:javax.annotation-api:1.3.2'
+
     //HTTP Server
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.5.4'
 
@@ -31,7 +35,7 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
     //POJOs
-    compile project(":ProcelioCommon")
+    compile project(":ProcelioDelta")
 
     //Database access and JDBC Driver
     compile group: 'org.jooq', name: 'jooq', version: '3.10.7'
@@ -63,21 +67,25 @@ buildscript {
 task execute(type:JavaExec) {
     main = mainClassName
     classpath = sourceSets.main.runtimeClasspath
-    jvmArgs = ['--add-modules', 'java.xml.bind']
 }
 
 task executeMem(type:JavaExec) {
     main = mainClassName
     classpath = sourceSets.main.runtimeClasspath
-    jvmArgs = ['--add-modules', 'java.xml.bind', '-Xms2g', '-Xmx8g', '-Xss50M']
+    jvmArgs = ['-Xms2g', '-Xmx8g', '-Xss50M']
 }
 
-shadowJar {
-    baseName = 'ProcelioServer'
-    classifier = null
-    version = null
+task copyToLib(type: Copy) {
+    jar.dependsOn copyToLib
+    into "$buildDir/output/lib"
+    from configurations.runtime
+}
 
+jar {
     manifest {
-        attributes 'Main-Class': mainClassName
+        attributes(
+                'Class-Path': configurations.compile.collect { "lib/" + it.getName() }.join(' '),
+                'Main-Class': 'procul.studios.ProcelioServer'
+        )
     }
 }
